Fixed mobile view background and spacing

--- a/static/styles/loggedIn.css
+++ b/static/styles/loggedIn.css
@@ -1,4 +1,4 @@
-body {
+html {
     font-family: 'Arial', sans-serif; 
     
     background-image: url('https://www.usatoday.com/gcdn/-mm-/50cf5bbf732a4dc596a6cd2b25c2d55faffc0cbe/c=0-198-3888-2395/local/-/media/2015/10/07/CNYGroup/Binghamton/635798431224650549-BGMBrd-04-28-2015-Daily-1-A003--2015-04-27-IMG-SUNY-Binghamton-034.-1-1-QO84E01A-L602622216-IMG-SUNY-Binghamton-034.-1-1-QO84E01A-1-.jpg?width=3200&height=1809&fit=crop&format=pjpg&auto=webp');
@@ -14,9 +14,9 @@ img{
   margin: 0 auto;
 }
 
-.binghamton-green { 
+/* .binghamton-green { 
     background-color: #006747; 
-}
+} */
 
 .hero-body{
   padding: 1rem 0.5rem;
@@ -171,4 +171,14 @@ input:checked + .slider:before {
 .slider.round:before {
   border-radius: 50%;
 }
+
+
+@media only screen and (max-width: 600px) {
+  .recent-transactions{
+    width: fit-content;
+    font-size: 87%;
+  }
+  }
+
+
 
